Old ATTU Site Description
This is the old layout for my AntiTikTok Union Site. You can do whatever with the code if you give me credit.

--- a/OffTopic/chatrooms.html
+++ b/OffTopic/chatrooms.html
@@ -5,5 +5,11 @@
 <iframe src="https://www3.cbox.ws/box/?boxid=3512908&boxtag=L5gMSR&tid=1&tkey=a75500ebe3e0acbd" width="245" height="300" allowtransparency="yes" allow="autoplay" frameborder="0" marginheight="0" marginwidth="0" scrolling="auto"></iframe>
 <iframe src="https://www3.cbox.ws/box/?boxid=3512909&boxtag=4yr1FK&tid=1&tkey=7c91c17aa433c4b3" width="245" height="300" allowtransparency="yes" allow="autoplay" frameborder="0" marginheight="0" marginwidth="0" scrolling="auto"></iframe>
 <iframe src="https://www3.cbox.ws/box/?boxid=3512909&boxtag=4yr1FK" width="245" height="300" allowtransparency="yes" allow="autoplay" frameborder="0" marginheight="0" marginwidth="0" scrolling="auto"></iframe>
+<br>
+<div class:icon>
+  <a href=https://antitiktok-union.neocities.org style=background-color:black>
+  <img src=/images/Homepage.png>
+  </a>
+  </div>
 </body>
 </html>
