--- a/TikTok_Bad-Evidence/censorship.html
+++ b/TikTok_Bad-Evidence/censorship.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html lang=en>
-<body style=TikTok_Bad-Evidence/style.css>
-<h1 style=TikTok_Bad-Evidence/style.css>Hello world</h1>
+<head>
+<meta name="description" content="T1kT0k Heavily Censors">
+<link rel="shortcut icon" href="/images/ATTU_logo.png">
+<link rel="stylesheet" href="/CSS/regular.css">
+<title>Censorship</title>
+<body style=text-align:center>
+<h1>TikTok Censorship</h1>
+<p1 style=background-color:black>TikTok heavily censors things. If you already knew this, TikTok is owned by a Chinese company. It nearly got banned once thanks to Trump, but it didn't go through and as a result, it wasn't banned. Now as for the Chinese company thing, it doesn't seem the biggest deal at first right? Well, it is a big deal. Due to Chinese law, if data is asked for, the companies must give it. As a result, if Chinese demanded data, the company would have no choice except to give it up. While censorship is a pretty major problem across all platforms, the Chinese having access to removing stuff whenever they like isn't a good thing considering their history. They also have very advanced AI too which makes it more annoying for people. For the people about to say "you won't tell us who even owns it", so to answer that question, it is ByteDance. Now that is not good at all.</p1>
+<br>
+<br>
+<div class:icon>
+  <a href=https://antitiktok-union.neocities.org style=background-color:black>
+  <img src=/images/Homepage.png>
+  </a>
+  </div>
 </body>
 </html>
