--- a/credits.html
+++ b/credits.html
@@ -31,5 +31,11 @@
         </a>
     </div>
     </div>
+<br>
+<div class:icon>
+  <a href=https://antitiktok-union.neocities.org style=background-color:black>
+  <img src=/images/Homepage.png>
+  </a>
+  </div>
     </body>
 </html>
