--- a/TikTok_Bad-Evidence/censorship.html
+++ b/TikTok_Bad-Evidence/censorship.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="description" content="T1kT0k Heavily Censors">
 <link rel="shortcut icon" href="/images/ATTU_logo.png">
-<link rel="stylesheet" href="/CSS/regular.css">
+<link rel="stylesheet" href="/CSS/normal.css">
 <title>Censorship</title>
 <body style=text-align:center>
 <h1>TikTok Censorship</h1>
