--- a/TikTok_Bad-Evidence/cringetoks.html
+++ b/TikTok_Bad-Evidence/cringetoks.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="description" content="T1kT0k Cringe">
 <link rel="shortcut icon" href="/images/ATTU_logo.png">
-<link rel="stylesheet" href="/CSS/regular.css">
+<link rel="stylesheet" href="/CSS/normal.css">
 <title>CringeToks</title>
 </head>
 <body style=text-align:center;>
