--- a/TikTok_Bad-Evidence/dangerous_challenges.html
+++ b/TikTok_Bad-Evidence/dangerous_challenges.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="description" content="T1kT0k Challenges Suck">
 <link rel="shortcut icon" href="/images/ATTU_logo.png">
-<link rel="stylesheet" href="/CSS/regular.css">
+<link rel="stylesheet" href="/CSS/normal.css">
 <title>Dangerous Challenges</title>
 <body style=text-align:center>
     <h1>Dangerous TikTok Challenges</h1>
