--- a/credits.html
+++ b/credits.html
@@ -3,14 +3,14 @@
 <head>
 <meta name="description" content="Thanks for helping">
 <link rel="shortcut icon" href="/images/ATTU_logo.png">
-<link rel="stylesheet" href="/CSS/regular.css">
+<link rel="stylesheet" href="/CSS/normal.css">
 <title>Credits</title>
 <body style=text-align:center>
 <h1>Creators of Site</h1>
 <p1>This is the section for credits. I coded this whole site but the other things are for stuff like making images that I can put here or making videos about it. And thank you for viewing the site :D</p1>
 <div class:menu-section>
     <div class:icon>
-<a href=https://www.youtube.com/channel/UCZvXBDuyPEfj5fWhqMLwgfw/about>
+<a href=https://www.youtube.com/c/DigitalCheese/featured>
     <img src=/images/digitalcheese.jpg>
     <br>
     <h1>Digital Cheese - Created: Assets, Code, and Videos</h1>
